<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group  android:id="@+id/group_feature"
            android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_dialog"
            android:icon="@drawable/ic_group_black_36dp"
            android:title="@string/create_dialog" />
        <item
            android:id="@+id/nav_dialogs"
            android:icon="@drawable/ic_chat_black_36dp"
            android:title="@string/dialog" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_group_add_black_36dp"
            android:title="@string/join" />
    </group>

    <group  android:id="@+id/group_settings"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_36dp"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_36dp"
                android:title="@string/about_prog" />
    </group>
</menu>
