<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:text="@string/enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_password_textView"
        android:textAppearance="@android:style/TextAppearance.Material.Display1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/create_password_editText"
        android:layout_marginTop="8dp"
        android:hint="@string/create_passvord"
        android:maxLength="4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/create_password_editText2"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password_again"
        android:maxLength="4" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_password_button_cancel"
            android:layout_weight="1"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_margin="8dp" />

        <Button
            android:text="@string/install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_password_button_ok"
            android:layout_weight="1"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_margin="8dp" />
    </LinearLayout>

</LinearLayout>