<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kirill.mess.Fragment.Setting_Fragment">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="24dp"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        card_view:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        card_view:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:text="@string/safe_entr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/textView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <Switch
                android:text="@string/use_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switch_use_password"
                android:layout_marginTop="8dp"
                android:checked="false" />

            <Switch
                android:text="@string/use_finger_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/switch_use_fingerprint"
                android:layout_marginTop="8dp" />

            <Button
                android:text="@string/create_passvord"
                android:visibility="gone"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_password"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>>
    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_cancel"
        style="?android:attr/buttonBarNegativeButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/save"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
