<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_ImageView"
        android:src="@drawable/ic_group_black_maxdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        android:layout_height="130dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="130dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_camera_ImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_camera_enhance_black_24dp"
        app:layout_constraintTop_toTopOf="@+id/setting_ImageView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toRightOf="@+id/setting_ImageView"
        app:layout_constraintLeft_toLeftOf="@+id/setting_ImageView"
        app:layout_constraintHorizontal_bias="0.9"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/setting_ImageView" />

    <android.support.v7.widget.CardView
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/setting_ImageView"
        android:id="@+id/cardView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp">

            <TextView
                android:text="@string/name_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/textView2"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/setting_editText_name"
                android:hint="@string/enter_name_dial"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/setting_key_cardViewTab"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_width="0dp"
        app:layout_constraintVertical_bias="0.56"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:text="@string/tap_copy_key"
            android:layout_width="match_parent"
            android:id="@+id/setting_textView_key"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_margin="8dp" />

    </android.support.v7.widget.CardView>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_mess_cancel"
        style="?android:attr/buttonBarNegativeButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/save"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_mess_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>