<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


            <ImageView
                android:layout_width="0dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/imageView"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="120dp" />

            <TextView
                android:text="Swift Message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/about_titel_textView"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <TextView
                android:text="@string/text_view_version"
                android:layout_width="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/about_version_textView"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/about_titel_textView"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/about_version_textView"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/about_mail_cardView">

        <TextView
            android:text="@string/text_view_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_mail_textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_version_textView"
            android:layout_margin="8dp" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/about_mail_cardView"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/about_bank_cardView">

        <TextView
            android:text="@string/text_view_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_bank_textView"
            android:layout_margin="8dp" />
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>