<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Create_Dialog_Fragment"
    android:id="@+id/ConstraintLayout">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_ImageView"
        android:src="@drawable/ic_group_black_maxdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="52dp"
        android:layout_height="130dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="130dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/create_dialog_camera_ImageView"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_camera_enhance_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="@+id/setting_ImageView"
        app:layout_constraintVertical_bias="0.69"
        app:layout_constraintRight_toRightOf="@+id/setting_ImageView"
        app:layout_constraintLeft_toLeftOf="@+id/setting_ImageView"
        app:layout_constraintHorizontal_bias="0.9"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground" />

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        card_view:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        card_view:layout_constraintLeft_toLeftOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/setting_ImageView"
        android:layout_height="0dp"
        card_view:layout_constraintHorizontal_bias="0.62"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="52dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/create_dialog_editText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:hint="@string/enter_name_dial"
            android:layout_margin="8dp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/create_dialod_cardViewTab"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        android:layout_width="0dp"
        app:layout_constraintVertical_bias="0.56"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/create_dialog_editText_key"
                android:hint="@string/unique_key"
                android:maxLength="14"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />

            <TextView
                android:text="@string/tap_copy_key"
                android:layout_width="match_parent"
                android:id="@+id/create_dialog_textView"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_margin="8dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_dialog_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_create_white_24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
